Validation Operation, Mail Sender